--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         Укажите свой API-ключ. Тестовый ключ НЕ БУДЕТ работать на других сайтах.
         Получить ключ можно в Кабинете разработчика: https://developer.tech.yandex.ru/keys/
     -->
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru-RU&amp;apikey=319343c0-2efc-4ada-b206-7e98ff41dd8e" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru-RU&amp;apikey=< Ваш KEY >" type="text/javascript"></script>
     <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
     <script src="static/js/object_manager.js" type="text/javascript"></script>
 	<style>
